--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
-  <title>book-your-room</title>
+  <title>Book Your Room!</title>
+  <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
 </head>
 
 <body>
